# vitis_HLS_template

./: .gitignore  CMakeLists.txt  README.md
modules/A/: CMakeLists.txt
modules/B/: CMakeLists.txt
